--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,8 @@ img {
 }
 
 main a:not(.button):not(.fa):not(.arrow),
-footer a:not(.button):not(.fa):not(.arrow){
+footer a:not(.button):not(.fa):not(.arrow),
+main a:not(img) {
     padding-left: 2px;
     padding-right: 2px;
     color: black;
@@ -37,7 +38,9 @@ footer a:not(.button):not(.fa):not(.arrow){
 main a:not(.button):not(.arrow):focus,
 main a:not(.button):not(.arrow):hover,
 footer a:not(.button):not(.arrow):focus,
-footer a:not(.button):not(.arrow):hover {
+footer a:not(.button):not(.arrow):hover,
+main a:not(a img):focus,
+main a:not(a img):hover {
     background: var(--color-blue);
     color: white;
     transition: all 0.25s;
